tests/ui/plyread_alias_duplicate_across_repeated_name.rs
use ply_rs_bw::PlyRead;

#[derive(PlyRead)]
struct Vertex {
    #[ply(name = "a")]
    #[ply(name = "a")]
    x: i32,
}

fn main() {}
